--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "superagent-load-balancer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "load balancer plugin for superagent",
   "scripts": {
     "test": "node ./node_modules/.bin/eslint ./*.js && node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./test/*.js --"
   },
   "keywords": [
     "superagent",
-    "plugin"
+    "plugin",
+    "load balance",
+    "load balancer"
   ],
   "license": "MIT",
   "author": "Tree Xie <vicansocanbico@gmail.com>",
