--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superagent-load-balancer",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "load balancer plugin for superagent",
   "scripts": {
     "test": "node ./node_modules/.bin/eslint ./*.js && node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./test/*.js --"
@@ -20,9 +20,10 @@
   "readmeFilename": "README.md",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^2.5.1",
-    "eslint-config-airbnb": "^6.2.0",
-    "istanbul": "^0.4.2",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.5.0",
+    "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "superagent": "^1.8.3"
   },
