--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superagent-load-balancer",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "load balancer plugin for superagent",
   "scripts": {
     "test": "node ./node_modules/.bin/eslint ./*.js && node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./test/*.js --"
@@ -20,12 +20,14 @@
   "readmeFilename": "README.md",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.5.0",
-    "istanbul": "^0.4.3",
-    "mocha": "^2.4.5",
-    "superagent": "^1.8.3"
+    "eslint": "^3.6.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^2.5.3",
+    "superagent": "^2.3.0"
   },
   "engines": {
     "node": ">=0.10.0"
