--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 sudo: false
 language: node_js
 node_js:
+  - "7"
   - "6"
   - "5"
   - "4"
+
+services:
+  - docker
+
+before_install:
+  - docker pull influxdb:alpine
+  - docker run -d -p 8086:8086 influxdb:alpine
 
 script:
   - npm test
